--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 :root {
   --hover-focus-color: #1e90ff;
 }
+
 html {
   box-sizing: border-box;
 }
@@ -39,6 +40,9 @@ img {
 }
 .list {
   list-style: none;
+}
+.link {
+  transition-duration: 250ms;
 }
 .link:hover,
 .link:focus {
@@ -108,7 +112,22 @@ img {
 .header-item:not(:last-child) {
   margin-right: 50px;
 }
+.header-link.active-page {
+  color: var(--hover-focus-color);
+}
+.active-page::after {
+  position: absolute;
+  display: block;
+  content: "";
+  display: block;
+  height: 4px;
+  width: 100%;
+  bottom: -32px;
+  border-radius: 2px;
+  background-color: var(--hover-focus-color);
+}
 .header-link {
+  position: relative;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -130,15 +149,18 @@ img {
   width: 100%;
   background-color: rgba(47, 48, 58, 0.4);
 }
-
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  overflow: hidden;
   width: 528px;
   height: 581px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .modal-icon-btn {
@@ -154,14 +176,18 @@ img {
   cursor: pointer;
   border-radius: 50%;
   background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   transition: background-color 250ms linear;
 }
-
+.modal-icon-btn:hover {
+  fill: var(--hover-focus-color);
+}
 .modal-closing-icon {
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: transparent;
   border: none;
+  outline: 0;
 }
 .modal-backdrop.is-hidden {
   opacity: 0;
@@ -236,8 +262,6 @@ img {
   text-align: center;
 }
 .hero-btn {
-  display: block;
-  margin: 0 auto;
   border-radius: 4px;
   padding: 10px 32px;
   margin-top: 30px;
@@ -252,6 +276,13 @@ img {
   line-height: 1.9;
   letter-spacing: 0.06em;
   border: none;
+
+  transition-duration: 250ms;
+}
+.hero-btn:hover,
+.hero-btn:focus {
+  color: var(--hover-focus-color);
+  background-color: #ffffff;
 }
 
 /* =================================================== */
@@ -404,6 +435,8 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition-duration: 250ms;
 }
 
 .team-icon-link:focus,
@@ -448,6 +481,8 @@ img {
   width: 170px;
   height: 90px;
   border: 1px solid #afb1b8;
+
+  transition-duration: 250ms;
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -495,6 +530,8 @@ img {
   align-items: center;
   fill: #ffffff;
   border-radius: 50%;
+
+  transition-duration: 250ms;
 }
 .footer-icon-link {
   display: flex;
@@ -504,6 +541,8 @@ img {
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition-duration: 250ms;
 }
 .footer-icon-link:hover,
 .footer-icon-link:focus {
@@ -547,6 +586,8 @@ img {
   letter-spacing: 0.03em;
   border: none;
 
+  transition-duration: 250ms;
+
   background-color: #f5f4fa;
   color: #212121;
 }
@@ -567,7 +608,7 @@ img {
   margin-top: 30px;
   border: 1px solid #eeeeee;
   transition-property: background-color;
-  transition-duration: 1000ms;
+  transition-duration: 250ms;
 }
 .protflio-item:focus,
 .protflio-item:hover {
@@ -590,7 +631,7 @@ img {
   font-size: 18px;
   line-height: 28px;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(100%);
 
   color: #ffffff;
